# SW-Engine

./: CMakeLists.txt  README.md
Build-Win32/example/RedTriangle.dir/Release/RedTriangle.tlog/: RedTriangle.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Build-Win32/framework/framework.dir/Release/framework.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
doc/: 任务规划.docx  如何进行github协同开发.docx  引擎架构.docx  渲染兴趣.txt
example/: CMakeLists.txt  Scene.cpp
framework/: Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  EGLWindow.cpp  EGLWindow.h  Event.h  File.cpp  Font.cpp  Font.h  Key.h  Mesh.cpp  Mesh.h  Mouse.h  Platform.h  Program.h  Render.h  ResourceManger.cpp  ResourceManger.h  Timer.cpp  Timer.h  Util.h  component.cpp  component.h  entity.h  file.h  singleton.h  stb_image.h  texture.cpp  texture.h  window.cpp  window.h
lib/Debug/: framework.lib
lib/Release/: framework.lib
